Not all OpenCL devices used during render #53692

Closed
opened 2018-01-04 14:40:33 +01:00 by Grzegorz Wereszko · 9 comments

System Information
Windows 10 - 2x AMD Radeon RX 480

Blender Version
Broken: 2.79 5bd8ac9 - default 2.79 from blender.org

Short description of error
Blender is only rendering using single GPU even when both are selected.

Exact steps for others to reproduce the error
default scene. User Preferences shows both GPU.s Selecting one selects both devices. Unselecting one unselects both devices. When both are selected, GPU rendering is performed on single GPU.

Checked in LuxRender benchmark and i can see both devices, and render on both or single.

Drivers Adrenalin drivers17.12.2

**System Information** Windows 10 - 2x AMD Radeon RX 480 **Blender Version** Broken: 2.79 5bd8ac9 - default 2.79 from blender.org **Short description of error** Blender is only rendering using single GPU even when both are selected. **Exact steps for others to reproduce the error** default scene. User Preferences shows both GPU.s Selecting one selects both devices. Unselecting one unselects both devices. When both are selected, GPU rendering is performed on single GPU. Checked in LuxRender benchmark and i can see both devices, and render on both or single. Drivers Adrenalin drivers17.12.2

Added subscriber: @Prodeous

Added subscriber: @Prodeous

This issue was referenced by blender/cycles@31ccb84c12

This issue was referenced by blender/cycles@31ccb84c12607be9f26e8e5bc6e1c2fe0e8c3410

This issue was referenced by 0f4b46cee6

This issue was referenced by 0f4b46cee61277f3a56b202df61e6296e2629125
Member

Added subscribers: @Sergey, @lichtwerk

Added subscribers: @Sergey, @lichtwerk
Sergey Sharybin was assigned by Philipp Oeser 2018-01-09 19:41:16 +01:00
Member

Cant check this unfortunately on my laptop, @Sergey : could you have a look?

Cant check this unfortunately on my laptop, @Sergey : could you have a look?

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Added subscriber: @brecht

Added subscriber: @brecht

I committed a fix for this issue, but I couldn't reproduce the bug so I'm not sure if it works. My guess is that for whatever reason the driver is not giving us unique IDs for each device.

Tomorrow's build from https://builder.blender.org/download/ should have the fix.

I committed a fix for this issue, but I couldn't reproduce the bug so I'm not sure if it works. My guess is that for whatever reason the driver is not giving us unique IDs for each device. Tomorrow's build from https://builder.blender.org/download/ should have the fix.

Tested and confirm patch working as expected

Tested and confirm patch working as expected
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#53692
No description provided.